--- a/HTML/sparkling/index.html
+++ b/HTML/sparkling/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li> <a href="#">Home</a></li>
+            <li class="actual"> <a href="#">Home</a></li>
             <li> <a href="#">Blog</a></li>
             <li> <a href="#">Photos</a></li>
             <li> <a href="#">About</a></li>
