--- a/JS/For/002_for.html
+++ b/JS/For/002_for.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Bucle For</h1>
+    <p>push añade elementos y pop los elimina</p>
 
     <ul></ul>
     <button id="btn1">Eliminar último elemento</button>
@@ -21,6 +22,10 @@
         // Añadir un elemento al final del array
         frutas.push('naranja');
         frutas.push('sandia');
+        frutas.push('melon');
+        frutas.push('platano');
+        frutas.push('kiwi');
+        frutas.push('fresa');
 
         // - - - - - - - - - - - - - - - - - - 
 
