--- a/JS/webBaile/index_optimizado.html
+++ b/JS/webBaile/index_optimizado.html
@@ -62,7 +62,12 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Academia de Baile</p>
+        <p>&copy; Copyright 2025 - Academia de Baile</p>
+        <p><a href="#">Aviso Legal</a><a href="#">Política de Cookies</a></p>
+     </footer>   
+    
 
     <script>
         // Lista de apartados
