--- a/JS/webBaile/index.html
+++ b/JS/webBaile/index.html
@@ -1,104 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <header>
+    <header>
 
-    <div class="logo">logo</div>
-    <nav>
-        <ul>
-            <li><a onclick="mostrar('inicio')">inicio</a></li>
-            <li><a onclick="mostrar('cursos')">cursos</a></li>
-            <li><a onclick="mostrar('escuela')">escuela</a></li>
-            <li><a onclick="mostrar('contacto')">contacto</a></li>
-        </ul>
-    </nav>
- </header>
+        <div class="logo">logo</div>
+        <nav>
+            <ul>
+                <li><a onclick="mostrar('inicio')">inicio</a></li>
+                <li><a onclick="mostrar('cursos')">cursos</a></li>
+                <li><a onclick="mostrar('escuela')">escuela</a></li>
+                <li><a onclick="mostrar('contacto')">contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
- <main>
+    <main>
 
-    <section id="inicio">
-        <h1>Bienvenidos a la mejor escuela de baile de Asturias y Gijón</h1>
-        
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vitae dignissimos quidem. Quisquam magni in, animi nihil beatae impedit, illum magnam reprehenderit, molestias quibusdam aut dolorem labore non eligendi. Blanditiis.</p>
-    </section>
+        <section id="inicio">
+            <h1>Bienvenidos a la mejor escuela de baile de Asturias y Gijón</h1>
 
-    <section id="cursos">
-        <h1>Cursos de Baile: Salsa, Bachata, Street Dance</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus vitae dignissimos quidem. Quisquam
+                magni in, animi nihil beatae impedit, illum magnam reprehenderit, molestias quibusdam aut dolorem labore
+                non eligendi. Blanditiis.</p>
+        </section>
 
-        <ul>
-            <li>Salsa</li>
-            <li>Salsa 2</li>
-            <li>Bachata</li>
-            <li>Bachata 2</li>
-            <li>Street Dance</li>
-        </ul>
+        <section id="cursos">
+            <h1>Cursos de Baile: Salsa, Bachata, Street Dance</h1>
 
-        <h2>Horarios de nuestras clases de baile</h2>
-    </section>
+            <ul>
+                <li>Salsa</li>
+                <li>Salsa 2</li>
+                <li>Bachata</li>
+                <li>Bachata 2</li>
+                <li>Street Dance</li>
+            </ul>
 
-    <section id="escuela">
-        <h1>Nuestra Escuela</h1>
-        <p>Desde lso comienzos tanto Fulanito como Menganito, fundadores de la escuela nos ha gustado bailar</p>
-    </section>
+            <h2>Horarios de nuestras clases de baile</h2>
+        </section>
 
-    <section id="contacto">
-        <h1>Ven a conocernos</h1>
-        <h2>Contacta con nosotros</h2>
-        <address>
-            c/Moros 22, Gijón Asturias
-        </address>
-        <a href="tel:+34999888777">999888777</a>
-        <a href="https://wa.me/3499988777">escribenos por Whatsapp</a>
-    </section>
+        <section id="escuela">
+            <h1>Nuestra Escuela</h1>
+            <p>Desde lso comienzos tanto Fulanito como Menganito, fundadores de la escuela nos ha gustado bailar</p>
+        </section>
+
+        <section id="contacto">
+            <h1>Ven a conocernos</h1>
+            <h2>Contacta con nosotros</h2>
+            <address>
+                c/Moros 22, Gijón Asturias
+            </address>
+            <a href="tel:+34999888777">999888777</a>
+            <a href="https://wa.me/3499988777">escribenos por Whatsapp</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; Copyright 2025 - Academia de Baile</p>
+        <p><a href="#">Aviso Legal</a><a href="#">Política de Cookies</a></p>
+    </footer>
+
+    <script>
+        //datos
+        const datos = [
+            "inicio",
+            "cursos",
+            "escuela",
+            "contacto"
+        ];
+        // almacena el partado que se esta mostrando
+        function mostrar(folio) {
+            //ocultar todos los apartados
+            for (i = 0; i < datos.length; i++) {
+                document.getElementById(datos[i]).style.display = 'none';
+            }
 
 
-
-
-
-
- </main>
-
- <footer></footer>   
-
- <script>
-//DATOS
-//Lista de apartados
-let apartados = [
-    'inicio',
-    'cursos',
-    'escuela',
-    'contacto'
-];
-
-let actual =apartados;
-
-//Ocultar todo
-
-function ocultar() {
-    for (let i = 0; i < apartados.length; i++) {
-        document.querySelector('#' + apartados[i]).style.display = 'none';
-    }
-}
-//ejecutar función
-ocultar();
-
-function mostrar(apt=actual) {
-    actual=apt;
-    ocultar();
-    document.querySelector('#' + apt).style.display = 'block';
-}
-
-mostrar();
+            //mostrar solo el apartado que queremos
+            document.getElementById(folio).style.display = 'block';
+        }
+        //al cargar la pagina lanzamos la función mostrar
+        mostrar("inicio");
 
 
 
 
- </script>
+
+    </script>
 </body>
+
 </html>
