--- a/JS/2_Arrays/Array_001.html
+++ b/JS/2_Arrays/Array_001.html
@@ -8,10 +8,11 @@
 <body>
     
 
-
     <script>
+        let mascotas =["Tirso", "Obama", "Carla", "Liby", "Pepper"];
 
-        
+        document.write(mascotas[4]);
+
     </script>
 
 </body>
