--- a/JS/GaleriasImagen/avataresFraggle/avatarFraggle_003.html
+++ b/JS/GaleriasImagen/avataresFraggle/avatarFraggle_003.html
@@ -60,10 +60,17 @@
         }
 
         button {
-            background: none;
+            background: tan;
             border: solid tan 1px;
-            color: tan;
+            color: white;
             border-radius: 20px;
+        }
+        button:hover{
+            background: orangered;
+        }
+
+        *{
+            transition: .3s;
         }
 
 
