--- a/JS/For/galeriaLoremPixum_2.html
+++ b/JS/For/galeriaLoremPixum_2.html
@@ -32,6 +32,7 @@
         img{
             max-width: 100%;
             display: block;
+            border-radius: 10px;;
         }
     </style>
 </head>
