--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio Curso</title>
+    <style>
+        :root{
+            --c1:lightseagreen;
+            --ff:sans-serif;
+        }
+
+        html{
+            padding: 10px;
+            background-color: var(--c1);
+        }
+
+        body{
+            font-family: var(--ff);
+            max-width: 960px;
+            margin:30px auto;
+            background: white;
+            border-radius: 20px;
+            padding: 20px;
+        }
+
+        ul{
+            list-style: none;
+            padding-left: 0;
+        }
+
+        li{
+            outline:solid 1px grey;
+            border-radius: 8px;
+            padding: 3px;
+            margin-bottom: 7px;;
+        }
+        a{
+            text-decoration: none;
+            color:var(--c1)
+        }
+    </style>
 </head>
 
 <body>
