--- a/JS/For/cartaRestaurante_001.html
+++ b/JS/For/cartaRestaurante_001.html
@@ -10,74 +10,44 @@
     <script>
         const menu =[
             {
+                id:1520,
                 nombre: 'Hummus de Tomate',
                 descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
                 precio: 9,
-                activo: true
+                activo: true,
+                alergenos:['amendra', 'frutos secos']
             },
             {
+                id:1525,
                 nombre: 'Patata asadas',
                 descripcion: 'Con fiambre de Porchetta, acompañado de mayopesto y crema de pimientos asados.',
                 precio: 11,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
-            },
-            {
-                nombre: 'Hummus de Tomate',
-                descripcion: 'acompañado de almendras tosadas, pesto genovese, olio al peperonciono y  zumaque.',
-                precio: 9,
-                activo: true
+                activo: false,
+                alergenos:[]
+
             }
         ];
         let libreta='<ul>';
         
         for(i=0;i<menu.length; i++){
-            //repetimos esta estructura en cada iteración
-            libreta+='<li>';
-                libreta+='<strong>'+menu[i].nombre+'</strong>';
-                libreta+='<p>'+menu[i].descripcion+'</p>';
-                libreta+='<span>'+menu[i].precio+',00 €</span>';
-            libreta+='</li>';
+            if(menu[i].activo){
+                //repetimos esta estructura en cada iteración
+                libreta+='<li>';
+                    libreta+='<strong>'+menu[i].nombre+'</strong>';
+                    libreta+='<p>'+menu[i].descripcion+'</p>';
+                    libreta+='<span>'+menu[i].precio+',00 €</span>';
+                libreta+='</li>';
 
-            // Lo mismo pero con comillas graves:
-            libreta+=`
-                <li>
-                    <strong>${menu[i].nombre}</strong>
-                    <p>${menu[i].descripcion}</p>
-                    <span>${menu[i].precio},00 €</span>
-                </li>`;
+                // Lo mismo pero con comillas graves:
+                // libreta+=`
+                //     <li>
+                //         <strong>${menu[i].nombre}</strong>
+                //         <p>${menu[i].descripcion}</p>
+                //         <span>${menu[i].precio},00 €</span>
+                //     </li>`;
 
-
-        }
+            } // ciera if
+        } // cierra for
 
         libreta+='</ul>';
 
