--- a/JS/For/bucleDentroDeBucle_tablaMutliplicar.html
+++ b/JS/For/bucleDentroDeBucle_tablaMutliplicar.html
@@ -8,6 +8,7 @@
         body{
             display: flex;
             flex-wrap: wrap;
+            justify-content: center;
             gap:10px;
 
             background: tan;
