--- a/JS/For/bucleDentroDeBucle_calendario.html
+++ b/JS/For/bucleDentroDeBucle_calendario.html
@@ -14,12 +14,23 @@
             --ff: 'Poppins', sans-serif;
         }
 
+        *{
+            cursor: default;
+        }
+        ::selection{
+            background-color: transparent;
+        }
+
+        h1, h2,h3, h4{
+            margin: 0;
+        }
+
         body {
             background: var(--c1);
             font-family: var(--ff);
             max-width: 960px;
             margin: 0 auto;
-            padding: 10px;
+            padding: 20px;
         }
 
         main {
@@ -44,6 +55,15 @@
         li {
             text-align: center;
             color: darkgray;
+        }
+
+        div.mes{
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+            transition: .3s;
+        }
+
+        div.mes:hover{
+            box-shadow: 4px 8px 15px rgba(2, 1, 1, 0.795);
         }
 
 
@@ -105,7 +125,7 @@
 
         for (i = 0; i < 12; i++) {
             //bucle que repite las acciones
-            libreta += `<div>`;
+            libreta += `<div class="mes">`;
             libreta += `<h2>${meses[i][0]}</h2>`;
             libreta += '<ul>';
             libreta += `<li>L</li><li>M</li><li>X</li><li>J</li><li>V</li><li>S</li><li>D</li>`;
