Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#>inicio</a></li>
+            </ul>
+        </nav>
 
     </header>
 
