--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#>inicio</a></li>
+                <li><a href="#">inicio</a></li>
             </ul>
         </nav>
 
